# http1.0-server

./: .gitignore  CMakeLists.txt  README.md  http_server.cpp  main.cpp
include/: connection.h  file_service.h  http_parser.h  http_server.h  response.h  response_serializer.h  router.h
src/: connection.cpp  file_service.cpp  http_parser.cpp  http_server.cpp
tests/: main.cpp  test_file_service.cpp  test_file_service.h
tests/static_test_files/: index.html
website/: index.html  styles.css
